--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.482.0",
     "mongodb": "^6.15.0",
-    "next": "15.1.0",
+    "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
