--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.482.0",
     "mongodb": "^6.15.0",
     "next": "^15.2.4",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
