--- a/package.json
+++ b/package.json
@@ -21,18 +21,25 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.3",
     "@types/mongoose": "^5.11.96",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.482.0",
     "mongodb": "^6.15.0",
-    "mongoose": "^8.13.0",
+    "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2",
     "next": "^15.2.4",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^4.7.0",
