--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "path": "^0.12.7",
